parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> opt_newlines statement_list opt_newlines
Rule 2     statement_list -> statement_list NEWLINE statement
Rule 3     statement_list -> statement
Rule 4     opt_newlines -> NEWLINE opt_newlines
Rule 5     opt_newlines -> empty
Rule 6     empty -> <empty>
Rule 7     statement -> assignment_statement
Rule 8     statement -> if_statement
Rule 9     statement -> for_statement
Rule 10    statement -> print_statement
Rule 11    statement -> append_statement
Rule 12    statement -> remove_statement
Rule 13    statement -> function
Rule 14    statement -> expression
Rule 15    assignment_statement -> IDENTIFIER ASSIGN expression
Rule 16    print_statement -> PRINT LPAREN expression RPAREN
Rule 17    expression -> expression PLUS expression
Rule 18    expression -> expression MINUS expression
Rule 19    expression -> expression TIMES expression
Rule 20    expression -> expression DIVIDE expression
Rule 21    expression -> expression LT expression
Rule 22    expression -> expression GT expression
Rule 23    expression -> expression LE expression
Rule 24    expression -> expression GE expression
Rule 25    expression -> expression EQ expression
Rule 26    expression -> expression NE expression
Rule 27    expression -> expression AND expression
Rule 28    expression -> expression OR expression
Rule 29    expression -> pop_statement
Rule 30    expression -> MINUS expression
Rule 31    expression -> NOT expression
Rule 32    expression -> LPAREN expression RPAREN
Rule 33    expression -> NUMBER
Rule 34    expression -> IDENTIFIER
Rule 35    expression -> NONE
Rule 36    expression -> TRUE
Rule 37    expression -> FALSE
Rule 38    expression -> list
Rule 39    expression -> LEN LPAREN expression RPAREN
Rule 40    if_statement -> IF LPAREN expression RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT NEWLINE elif_chain else_clause
Rule 41    if_statement -> IF LPAREN expression RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT NEWLINE elif_chain
Rule 42    if_statement -> IF LPAREN expression RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT NEWLINE else_clause
Rule 43    if_statement -> IF LPAREN expression RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT
Rule 44    elif_chain -> elif_chain elif_statement
Rule 45    elif_chain -> elif_statement
Rule 46    elif_statement -> ELIF LPAREN expression RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT NEWLINE
Rule 47    else_clause -> ELSE COLON NEWLINE INDENT statement_list opt_newlines DEDENT NEWLINE
Rule 48    list_values -> list_values COMMA expression
Rule 49    list_values -> expression
Rule 50    list -> LBRACKET list_values RBRACKET
Rule 51    list -> LBRACKET RBRACKET
Rule 52    append_statement -> expression DOT APPEND LPAREN expression RPAREN
Rule 53    remove_statement -> expression DOT REMOVE LPAREN expression RPAREN
Rule 54    pop_statement -> expression DOT POP LPAREN expression RPAREN
Rule 55    function -> DEF IDENTIFIER LPAREN params RPAREN COLON NEWLINE INDENT statement_list opt_newlines return opt_newlines DEDENT
Rule 56    params -> params COMMA IDENTIFIER
Rule 57    params -> IDENTIFIER
Rule 58    return -> RETURN expression
Rule 59    return -> RETURN
Rule 60    args -> args COMMA expression
Rule 61    args -> expression
Rule 62    expression -> IDENTIFIER LPAREN args RPAREN
Rule 63    for_inputs -> expression COMMA expression COMMA expression
Rule 64    for_inputs -> expression COMMA expression
Rule 65    for_inputs -> expression
Rule 66    for_statement -> FOR IDENTIFIER IN RANGE LPAREN for_inputs RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT

Terminals, with rules where they appear

AND                  : 27
APPEND               : 52
ASSIGN               : 15
COLON                : 40 41 42 43 46 47 55 66
COMMA                : 48 56 60 63 63 64
DEDENT               : 40 41 42 43 46 47 55 66
DEF                  : 55
DIVIDE               : 20
DOT                  : 52 53 54
ELIF                 : 46
ELSE                 : 47
EQ                   : 25
FALSE                : 37
FOR                  : 66
GE                   : 24
GT                   : 22
IDENTIFIER           : 15 34 55 56 57 62 66
IF                   : 40 41 42 43
IN                   : 66
INDENT               : 40 41 42 43 46 47 55 66
LBRACKET             : 50 51
LE                   : 23
LEN                  : 39
LPAREN               : 16 32 39 40 41 42 43 46 52 53 54 55 62 66
LT                   : 21
MINUS                : 18 30
NE                   : 26
NEWLINE              : 2 4 40 40 41 41 42 42 43 46 46 47 47 55 66
NONE                 : 35
NOT                  : 31
NUMBER               : 33
OR                   : 28
PLUS                 : 17
POP                  : 54
PRINT                : 16
RANGE                : 66
RBRACKET             : 50 51
REMOVE               : 53
RETURN               : 58 59
RPAREN               : 16 32 39 40 41 42 43 46 52 53 54 55 62 66
TIMES                : 19
TRUE                 : 36
error                : 

Nonterminals, with rules where they appear

append_statement     : 11
args                 : 60 62
assignment_statement : 7
elif_chain           : 40 41 44
elif_statement       : 44 45
else_clause          : 40 42
empty                : 5
expression           : 14 15 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 30 31 32 39 40 41 42 43 46 48 49 52 52 53 53 54 54 58 60 61 63 63 63 64 64 65
for_inputs           : 66
for_statement        : 9
function             : 13
if_statement         : 8
list                 : 38
list_values          : 48 50
opt_newlines         : 1 1 4 40 41 42 43 46 47 55 55 66
params               : 55 56
pop_statement        : 29
print_statement      : 10
program              : 0
remove_statement     : 12
return               : 55
statement            : 2 3
statement_list       : 1 2 40 41 42 43 46 47 55 66

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . opt_newlines statement_list opt_newlines
    (4) opt_newlines -> . NEWLINE opt_newlines
    (5) opt_newlines -> . empty
    (6) empty -> .

    NEWLINE         shift and go to state 3
    IDENTIFIER      reduce using rule 6 (empty -> .)
    IF              reduce using rule 6 (empty -> .)
    FOR             reduce using rule 6 (empty -> .)
    PRINT           reduce using rule 6 (empty -> .)
    DEF             reduce using rule 6 (empty -> .)
    MINUS           reduce using rule 6 (empty -> .)
    NOT             reduce using rule 6 (empty -> .)
    LPAREN          reduce using rule 6 (empty -> .)
    NUMBER          reduce using rule 6 (empty -> .)
    NONE            reduce using rule 6 (empty -> .)
    TRUE            reduce using rule 6 (empty -> .)
    FALSE           reduce using rule 6 (empty -> .)
    LEN             reduce using rule 6 (empty -> .)
    LBRACKET        reduce using rule 6 (empty -> .)

    program                        shift and go to state 1
    opt_newlines                   shift and go to state 2
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> opt_newlines . statement_list opt_newlines
    (2) statement_list -> . statement_list NEWLINE statement
    (3) statement_list -> . statement
    (7) statement -> . assignment_statement
    (8) statement -> . if_statement
    (9) statement -> . for_statement
    (10) statement -> . print_statement
    (11) statement -> . append_statement
    (12) statement -> . remove_statement
    (13) statement -> . function
    (14) statement -> . expression
    (15) assignment_statement -> . IDENTIFIER ASSIGN expression
    (40) if_statement -> . IF LPAREN expression RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT NEWLINE elif_chain else_clause
    (41) if_statement -> . IF LPAREN expression RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT NEWLINE elif_chain
    (42) if_statement -> . IF LPAREN expression RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT NEWLINE else_clause
    (43) if_statement -> . IF LPAREN expression RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT
    (66) for_statement -> . FOR IDENTIFIER IN RANGE LPAREN for_inputs RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT
    (16) print_statement -> . PRINT LPAREN expression RPAREN
    (52) append_statement -> . expression DOT APPEND LPAREN expression RPAREN
    (53) remove_statement -> . expression DOT REMOVE LPAREN expression RPAREN
    (55) function -> . DEF IDENTIFIER LPAREN params RPAREN COLON NEWLINE INDENT statement_list opt_newlines return opt_newlines DEDENT
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NE expression
    (27) expression -> . expression AND expression
    (28) expression -> . expression OR expression
    (29) expression -> . pop_statement
    (30) expression -> . MINUS expression
    (31) expression -> . NOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER
    (35) expression -> . NONE
    (36) expression -> . TRUE
    (37) expression -> . FALSE
    (38) expression -> . list
    (39) expression -> . LEN LPAREN expression RPAREN
    (62) expression -> . IDENTIFIER LPAREN args RPAREN
    (54) pop_statement -> . expression DOT POP LPAREN expression RPAREN
    (50) list -> . LBRACKET list_values RBRACKET
    (51) list -> . LBRACKET RBRACKET

    IDENTIFIER      shift and go to state 15
    IF              shift and go to state 16
    FOR             shift and go to state 18
    PRINT           shift and go to state 19
    DEF             shift and go to state 20
    MINUS           shift and go to state 21
    NOT             shift and go to state 23
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 24
    NONE            shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    LEN             shift and go to state 29
    LBRACKET        shift and go to state 30

    statement_list                 shift and go to state 5
    statement                      shift and go to state 6
    assignment_statement           shift and go to state 7
    if_statement                   shift and go to state 8
    for_statement                  shift and go to state 9
    print_statement                shift and go to state 10
    append_statement               shift and go to state 11
    remove_statement               shift and go to state 12
    function                       shift and go to state 13
    expression                     shift and go to state 14
    pop_statement                  shift and go to state 22
    list                           shift and go to state 28

state 3

    (4) opt_newlines -> NEWLINE . opt_newlines
    (4) opt_newlines -> . NEWLINE opt_newlines
    (5) opt_newlines -> . empty
    (6) empty -> .

    NEWLINE         shift and go to state 3
    IDENTIFIER      reduce using rule 6 (empty -> .)
    IF              reduce using rule 6 (empty -> .)
    FOR             reduce using rule 6 (empty -> .)
    PRINT           reduce using rule 6 (empty -> .)
    DEF             reduce using rule 6 (empty -> .)
    MINUS           reduce using rule 6 (empty -> .)
    NOT             reduce using rule 6 (empty -> .)
    LPAREN          reduce using rule 6 (empty -> .)
    NUMBER          reduce using rule 6 (empty -> .)
    NONE            reduce using rule 6 (empty -> .)
    TRUE            reduce using rule 6 (empty -> .)
    FALSE           reduce using rule 6 (empty -> .)
    LEN             reduce using rule 6 (empty -> .)
    LBRACKET        reduce using rule 6 (empty -> .)
    $end            reduce using rule 6 (empty -> .)
    DEDENT          reduce using rule 6 (empty -> .)
    RETURN          reduce using rule 6 (empty -> .)

    opt_newlines                   shift and go to state 31
    empty                          shift and go to state 4

state 4

    (5) opt_newlines -> empty .

    IDENTIFIER      reduce using rule 5 (opt_newlines -> empty .)
    IF              reduce using rule 5 (opt_newlines -> empty .)
    FOR             reduce using rule 5 (opt_newlines -> empty .)
    PRINT           reduce using rule 5 (opt_newlines -> empty .)
    DEF             reduce using rule 5 (opt_newlines -> empty .)
    MINUS           reduce using rule 5 (opt_newlines -> empty .)
    NOT             reduce using rule 5 (opt_newlines -> empty .)
    LPAREN          reduce using rule 5 (opt_newlines -> empty .)
    NUMBER          reduce using rule 5 (opt_newlines -> empty .)
    NONE            reduce using rule 5 (opt_newlines -> empty .)
    TRUE            reduce using rule 5 (opt_newlines -> empty .)
    FALSE           reduce using rule 5 (opt_newlines -> empty .)
    LEN             reduce using rule 5 (opt_newlines -> empty .)
    LBRACKET        reduce using rule 5 (opt_newlines -> empty .)
    $end            reduce using rule 5 (opt_newlines -> empty .)
    DEDENT          reduce using rule 5 (opt_newlines -> empty .)
    RETURN          reduce using rule 5 (opt_newlines -> empty .)


state 5

    (1) program -> opt_newlines statement_list . opt_newlines
    (2) statement_list -> statement_list . NEWLINE statement
    (4) opt_newlines -> . NEWLINE opt_newlines
    (5) opt_newlines -> . empty
    (6) empty -> .

    NEWLINE         shift and go to state 33
    $end            reduce using rule 6 (empty -> .)

    opt_newlines                   shift and go to state 32
    empty                          shift and go to state 4

state 6

    (3) statement_list -> statement .

    NEWLINE         reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    DEDENT          reduce using rule 3 (statement_list -> statement .)
    RETURN          reduce using rule 3 (statement_list -> statement .)


state 7

    (7) statement -> assignment_statement .

    NEWLINE         reduce using rule 7 (statement -> assignment_statement .)
    $end            reduce using rule 7 (statement -> assignment_statement .)
    DEDENT          reduce using rule 7 (statement -> assignment_statement .)
    RETURN          reduce using rule 7 (statement -> assignment_statement .)


state 8

    (8) statement -> if_statement .

    NEWLINE         reduce using rule 8 (statement -> if_statement .)
    $end            reduce using rule 8 (statement -> if_statement .)
    DEDENT          reduce using rule 8 (statement -> if_statement .)
    RETURN          reduce using rule 8 (statement -> if_statement .)


state 9

    (9) statement -> for_statement .

    NEWLINE         reduce using rule 9 (statement -> for_statement .)
    $end            reduce using rule 9 (statement -> for_statement .)
    DEDENT          reduce using rule 9 (statement -> for_statement .)
    RETURN          reduce using rule 9 (statement -> for_statement .)


state 10

    (10) statement -> print_statement .

    NEWLINE         reduce using rule 10 (statement -> print_statement .)
    $end            reduce using rule 10 (statement -> print_statement .)
    DEDENT          reduce using rule 10 (statement -> print_statement .)
    RETURN          reduce using rule 10 (statement -> print_statement .)


state 11

    (11) statement -> append_statement .

    NEWLINE         reduce using rule 11 (statement -> append_statement .)
    $end            reduce using rule 11 (statement -> append_statement .)
    DEDENT          reduce using rule 11 (statement -> append_statement .)
    RETURN          reduce using rule 11 (statement -> append_statement .)


state 12

    (12) statement -> remove_statement .

    NEWLINE         reduce using rule 12 (statement -> remove_statement .)
    $end            reduce using rule 12 (statement -> remove_statement .)
    DEDENT          reduce using rule 12 (statement -> remove_statement .)
    RETURN          reduce using rule 12 (statement -> remove_statement .)


state 13

    (13) statement -> function .

    NEWLINE         reduce using rule 13 (statement -> function .)
    $end            reduce using rule 13 (statement -> function .)
    DEDENT          reduce using rule 13 (statement -> function .)
    RETURN          reduce using rule 13 (statement -> function .)


state 14

    (14) statement -> expression .
    (52) append_statement -> expression . DOT APPEND LPAREN expression RPAREN
    (53) remove_statement -> expression . DOT REMOVE LPAREN expression RPAREN
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . MINUS expression
    (19) expression -> expression . TIMES expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . LT expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LE expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . EQ expression
    (26) expression -> expression . NE expression
    (27) expression -> expression . AND expression
    (28) expression -> expression . OR expression
    (54) pop_statement -> expression . DOT POP LPAREN expression RPAREN

    NEWLINE         reduce using rule 14 (statement -> expression .)
    $end            reduce using rule 14 (statement -> expression .)
    DEDENT          reduce using rule 14 (statement -> expression .)
    RETURN          reduce using rule 14 (statement -> expression .)
    DOT             shift and go to state 34
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    LT              shift and go to state 39
    GT              shift and go to state 40
    LE              shift and go to state 41
    GE              shift and go to state 42
    EQ              shift and go to state 43
    NE              shift and go to state 44
    AND             shift and go to state 45
    OR              shift and go to state 46


state 15

    (15) assignment_statement -> IDENTIFIER . ASSIGN expression
    (34) expression -> IDENTIFIER .
    (62) expression -> IDENTIFIER . LPAREN args RPAREN

    ASSIGN          shift and go to state 47
    DOT             reduce using rule 34 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 34 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 34 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 34 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 34 (expression -> IDENTIFIER .)
    LT              reduce using rule 34 (expression -> IDENTIFIER .)
    GT              reduce using rule 34 (expression -> IDENTIFIER .)
    LE              reduce using rule 34 (expression -> IDENTIFIER .)
    GE              reduce using rule 34 (expression -> IDENTIFIER .)
    EQ              reduce using rule 34 (expression -> IDENTIFIER .)
    NE              reduce using rule 34 (expression -> IDENTIFIER .)
    AND             reduce using rule 34 (expression -> IDENTIFIER .)
    OR              reduce using rule 34 (expression -> IDENTIFIER .)
    NEWLINE         reduce using rule 34 (expression -> IDENTIFIER .)
    $end            reduce using rule 34 (expression -> IDENTIFIER .)
    DEDENT          reduce using rule 34 (expression -> IDENTIFIER .)
    RETURN          reduce using rule 34 (expression -> IDENTIFIER .)
    LPAREN          shift and go to state 48


state 16

    (40) if_statement -> IF . LPAREN expression RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT NEWLINE elif_chain else_clause
    (41) if_statement -> IF . LPAREN expression RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT NEWLINE elif_chain
    (42) if_statement -> IF . LPAREN expression RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT NEWLINE else_clause
    (43) if_statement -> IF . LPAREN expression RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT

    LPAREN          shift and go to state 49


state 17

    (32) expression -> LPAREN . expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NE expression
    (27) expression -> . expression AND expression
    (28) expression -> . expression OR expression
    (29) expression -> . pop_statement
    (30) expression -> . MINUS expression
    (31) expression -> . NOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER
    (35) expression -> . NONE
    (36) expression -> . TRUE
    (37) expression -> . FALSE
    (38) expression -> . list
    (39) expression -> . LEN LPAREN expression RPAREN
    (62) expression -> . IDENTIFIER LPAREN args RPAREN
    (54) pop_statement -> . expression DOT POP LPAREN expression RPAREN
    (50) list -> . LBRACKET list_values RBRACKET
    (51) list -> . LBRACKET RBRACKET

    MINUS           shift and go to state 21
    NOT             shift and go to state 23
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 24
    IDENTIFIER      shift and go to state 51
    NONE            shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    LEN             shift and go to state 29
    LBRACKET        shift and go to state 30

    expression                     shift and go to state 50
    pop_statement                  shift and go to state 22
    list                           shift and go to state 28

state 18

    (66) for_statement -> FOR . IDENTIFIER IN RANGE LPAREN for_inputs RPAREN COLON NEWLINE INDENT statement_list opt_newlines DEDENT

    IDENTIFIER      shift and go to state 52


state 19

    (16) print_statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 53


state 20

    (55) function -> DEF . IDENTIFIER LPAREN params RPAREN COLON NEWLINE INDENT statement_list opt_newlines return opt_newlines DEDENT

    IDENTIFIER      shift and go to state 54


state 21

    (30) expression -> MINUS . expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression EQ expression
    (26) expression -> . expression NE expression
    (27) expression -> . expression AND expression
    (28) expression -> . expression OR expression
    (29) expression -> . pop_statement
    (30) expression -> . MINUS expression
    (31) expression -> . NOT expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . IDENTIFIER
    (35) expression -> . NONE
    (36) expression -> . TRUE
    (37) expression -> . FALSE
    (38) expression -> . list
    (39) expression -> . LEN LPAREN expression RPAREN
    (62) expression -> . IDENTIFIER LPAREN args RPAREN
    (54) pop_statement -> . expression DOT POP LPAREN expression RPAREN
    (50) list -> . LBRACKET list_values RBRACKET
    (51) list -> . LBRACKET RBRACKET

    MINUS           shift and go to state 21
    NOT             shift and go to state 23
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 24
    IDENTIFIER      shift and go to state 51
    NONE            shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    LEN             shift and go to state 29
    LBRACKET        shift and go to state 30

    expression                     shift and go to state 55
    pop_statement                  shift and go to state 22
    list                           shift and go to state 28

state 22

    (29) expression -> pop_statement .

    DOT             reduce using rule 29 (expression -> pop_statement .)
    PLUS            reduce using rule 29 (expression -> pop_statement .)
    MINUS           reduce using rule 29 (expression -> pop_statement .)
    TIMES           reduce using rule 29 (expression -> pop_statement .)
    DIVIDE          reduce using rule 29 (expression -> pop_statement .)
    LT              reduce using rule 29 (expression -> pop_statement .)
    GT              reduce using rule 29 (expression -> pop_statement .)
    LE              reduce using rule 29 (expression -> pop_statement .)
    GE              reduce using rule 29 (expression -> pop_statement .)
    EQ              reduce using rule 29 (expression -> pop_statement .)
    NE              reduce using rule 29 (expression -> pop_statement .)
    AND             reduce using rule 29 (expression -> pop_statement .)
    OR              reduce using rule 29 (expression -> pop_statement .)
    NEWLINE         reduce using rule 29 (expression -> pop_statement .)
    $end            reduce using rule 29 (expression -> pop_statement .)
    RPAREN          reduce using rule 29 (expression -> pop_statement .)
    RBRACKET        reduce using rule 29 (expression -> pop_statement .)
    COMMA           reduce using rule 29 (expression -> pop_statement .)
    DEDENT          reduce using rule 29 (expression -> pop_statement .)
    RETURN          reduce using rule 29 (expression -> pop_statement .)


state 23
